Start creating table of songs.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
       </section>
       <section class="songs-container" style="display:none;">
         <div class="container-title">Songs for Artist</div>
-
+        <table class="songs-index-table">
+          <tr>
+            <th></th>
+            <th>Song Title</th>
+            <th>Artist</th>
+            <th>Genre</th>
+            <th>Rating</th>
+          </tr>
+        </table>
       </section>
     </main>
     <footer>
