Create table for songs.

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <section class="songs-container" style="display:none;">
         <div class="container-title">Songs for Artist</div>
         <table class="songs-index-table">
-          <tr>
-            <th></th>
-            <th>Song Title</th>
-            <th>Artist</th>
-            <th>Genre</th>
-            <th>Rating</th>
+          <tr class="song-table-header">
+            <th class="song-table-header-cell"></th>
+            <th class="song-table-header-cell">Song Title</th>
+            <th class="song-table-header-cell">Artist</th>
+            <th class="song-table-header-cell">Genre</th>
+            <th class="song-table-header-cell">Rating</th>
           </tr>
         </table>
       </section>
