--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <button class="search-button" id="search-container-button" type="button">SEARCH</button>
       </section>
       <section class="songs-container" style="display:none;">
+        <i class="fas fa-search fas-nav"></i><i class="fas-nav">Back to Search</i>
         <div class="container-title">Songs for Artist</div>
         <table class="songs-index-table">
           <tr class="song-table-header">
