--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input class="search-container-input" placeholder="Artist Name"</><br>
         <button class="search-button" id="search-container-button" type="button">SEARCH</button>
       </section>
-      <section class="songs-container" style="display:none;">
+      <section class="songs-container" style="display:none">
         <i class="fas fa-search fas-nav"></i><i class="fas-nav">Back to Search</i>
         <div class="container-title">Songs for Artist</div>
         <table class="songs-index-table">
@@ -43,9 +43,8 @@
         </table>
       </section>
       <section class="favorites-container" style="display:none;">
-        <i class="fas fa-search fas-fav"></i><i class="fas-nav">Back to Artist Search</i>
         <div class="container-title">Favorite Songs</div>
-        <table class="songs-index-table">
+        <table class="favorites-index-table">
           <tr class="song-table-header">
             <th class="song-table-header-cell"></th>
             <th class="song-table-header-cell">Song Title</th>
