Add playlists container and button to create a playlist. Button does not function yet.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
           </tr>
         </table>
       </section>
+      <section class="playlists-container">
+        <div class="container-title">Playlists</div>
+        <button class="playlist-btn" type="button">Create a New Playlist</button>
+        <table class="playlists-index-table">
+          <tr class="song-table-header">
+            <th class="song-table-header-cell">Playlist ID</th>
+            <th class="song-table-header-cell">Playlist</th>
+          </tr>
+        </table>
+      </section>
     </main>
     <footer>
     </footer>
