Add ability to see playlists.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <button class="header-display header-links" id="nav-fav-btn">Favorites</button>
-          <button class="header-display header-links">Playlists</button>
+          <button class="header-display header-links" id="nav-playlist-btn">Playlists</button>
           <input class="search-nav-input header-display" placeholder="Artist Name"</>
           <button class="header-display search-button" id="search-nav-button" type="button">SEARCH</button>
         </ul>
@@ -54,7 +54,7 @@
           </tr>
         </table>
       </section>
-      <section class="playlists-container">
+      <section class="playlists-container" style="display:none">
         <div class="container-title">Playlists</div>
         <button class="create-playlist-btn" id="create-new-playlist"type="button">Create a New Playlist</button><br>
         <input class="playlist-name-input" placeholder="Playlist Name" style="display:none"</>
