Add container for a single playlist

--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
           </tr>
         </table>
       </section>
+      <section class="single-playlist-container">
+        <i class="far fa-arrow-alt-circle-left" id="playlist-back"></i><i id="playlist-back">Back to Playlists</i>
+        <div class="container-title">Playlist</div>
+        <table class="playlist-show-table">
+          <tr class="song-table-header">
+            <th class="song-table-header-cell">Song Title</th>
+            <th class="song-table-header-cell">Artist</th>
+            <th class="song-table-header-cell">Genre</th>
+            <th class="song-table-header-cell">Rating</th>
+          </tr>
+        </table>
+      </section>
     </main>
     <footer>
     </footer>
