Add methods to parse single playlist data.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </tr>
         </table>
       </section>
-      <section class="single-playlist-container">
+      <section class="single-playlist-container" style="display:none">
         <i class="far fa-arrow-alt-circle-left" id="playlist-back"></i><i id="playlist-back">Back to Playlists</i>
         <div class="container-title">Playlist</div>
         <table class="playlist-show-table">
