--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div class="container-title">Favorite Songs</div>
         <table class="favorites-index-table">
           <tr class="song-table-header">
+            <th class="song-table-header-cell">Choose a Playlist</th>
             <th class="song-table-header-cell"></th>
             <th class="song-table-header-cell">Song Title</th>
             <th class="song-table-header-cell">Artist</th>
